# serializer version: 1
# name: test_load[ball_and_stick-mol]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(~8540, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_id': 'shape=(~8540,), atype=INT, constant=0',
        'atom_name': 'shape=(~8540,), atype=INT, constant=-1',
        'atom_types': "shape=(~2050,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(~8540,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(~8540,), atype=FLOAT, constant=0',
        'bond_type': "shape=(~2050,), atype=INT, unique=2, values=['1', '2']",
        'chain_id': 'shape=(~8540,), atype=INT, constant=0',
        'entity_id': 'shape=(~8540,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_backbone': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_carb': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_hetero': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_instanced': 'shape=(~2050,), atype=BOOLEAN, true=~1010, false=~1040',
        'is_lipid': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_nucleic': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_peptide': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_side_chain': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_solvent': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'mass': "shape=(~8540,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'material_index': 'shape=(~2620,), atype=INT, constant=0',
        'occupancy': 'shape=(~2050,), atype=FLOAT, constant=0',
        'position': 'shape=(~2050, 3), atype=FLOAT_VECTOR, range=[-0.356, 0.454]',
        'res_id': 'shape=(~8540,), atype=INT, constant=0',
        'res_name': 'shape=(~8540,), atype=INT, constant=-1',
        'sec_struct': 'shape=(~8540,), atype=INT, constant=0',
        'segid': 'shape=(~2050,), atype=INT, constant=0',
        'ures_id': 'shape=(~8540,), atype=INT, constant=0',
        'vdw_radii': "shape=(~8540,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~4620',
      'name': 'caffeine.mol',
      'polys': '~2620',
      'verts': '~2050',
    }),
  })
# ---
# name: test_load[ball_and_stick-sdf]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(~8540, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_id': 'shape=(~8540,), atype=INT, constant=0',
        'atom_name': 'shape=(~8540,), atype=INT, constant=-1',
        'atom_types': "shape=(~2050,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(~8540,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(~8540,), atype=FLOAT, constant=0',
        'bond_type': "shape=(~2050,), atype=INT, unique=2, values=['1', '2']",
        'chain_id': 'shape=(~8540,), atype=INT, constant=0',
        'entity_id': 'shape=(~8540,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_backbone': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_carb': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_hetero': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_instanced': 'shape=(~2050,), atype=BOOLEAN, true=~1010, false=~1040',
        'is_lipid': 'shape=(~2050,), atype=BOOLEAN, true=0, false=~2050',
        'is_nucleic': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_peptide': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_side_chain': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'is_solvent': 'shape=(~8540,), atype=BOOLEAN, true=0, false=~8540',
        'mass': "shape=(~8540,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'material_index': 'shape=(~2620,), atype=INT, constant=0',
        'occupancy': 'shape=(~2050,), atype=FLOAT, constant=0',
        'position': 'shape=(~2050, 3), atype=FLOAT_VECTOR, range=[-0.331, 0.488]',
        'res_id': 'shape=(~8540,), atype=INT, constant=0',
        'res_name': 'shape=(~8540,), atype=INT, constant=-1',
        'sec_struct': 'shape=(~8540,), atype=INT, constant=0',
        'segid': 'shape=(~2050,), atype=INT, constant=0',
        'ures_id': 'shape=(~8540,), atype=INT, constant=0',
        'vdw_radii': "shape=(~8540,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~4620',
      'name': 'caffeine.sdf',
      'polys': '~2620',
      'verts': '~2050',
    }),
  })
# ---
# name: test_load[spheres-mol]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(~1010, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_name': 'shape=(~1010,), atype=INT, constant=-1',
        'atom_types': "shape=(~1010,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(~1010,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(~1010,), atype=FLOAT, constant=0',
        'bond_type': "shape=(~1010,), atype=INT, unique=2, values=['1', '2']",
        'chain_id': 'shape=(~1010,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_backbone': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_carb': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_hetero': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_instanced': 'shape=(~1010,), atype=BOOLEAN, true=~1010, false=0',
        'is_lipid': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_nucleic': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_peptide': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_side_chain': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_solvent': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'mass': "shape=(~1010,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'occupancy': 'shape=(~1010,), atype=FLOAT, constant=0',
        'position': 'shape=(~1010, 3), atype=FLOAT_VECTOR, range=[-0.428, 0.511]',
        'res_id': 'shape=(~1010,), atype=INT, constant=0',
        'res_name': 'shape=(~1010,), atype=INT, constant=-1',
        'segid': 'shape=(~1010,), atype=INT, constant=0',
        'ures_id': 'shape=(~1010,), atype=INT, constant=0',
        'vdw_radii': "shape=(~1010,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~2880',
      'name': 'caffeine.mol',
      'polys': '~1920',
      'verts': '~1010',
    }),
  })
# ---
# name: test_load[spheres-sdf]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(~1010, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_name': 'shape=(~1010,), atype=INT, constant=-1',
        'atom_types': "shape=(~1010,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(~1010,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(~1010,), atype=FLOAT, constant=0',
        'bond_type': "shape=(~1010,), atype=INT, unique=2, values=['1', '2']",
        'chain_id': 'shape=(~1010,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_backbone': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_carb': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_hetero': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_instanced': 'shape=(~1010,), atype=BOOLEAN, true=~1010, false=0',
        'is_lipid': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_nucleic': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_peptide': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_side_chain': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'is_solvent': 'shape=(~1010,), atype=BOOLEAN, true=0, false=~1010',
        'mass': "shape=(~1010,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'occupancy': 'shape=(~1010,), atype=FLOAT, constant=0',
        'position': 'shape=(~1010, 3), atype=FLOAT_VECTOR, range=[-0.388, 0.548]',
        'res_id': 'shape=(~1010,), atype=INT, constant=0',
        'res_name': 'shape=(~1010,), atype=INT, constant=-1',
        'segid': 'shape=(~1010,), atype=INT, constant=0',
        'ures_id': 'shape=(~1010,), atype=INT, constant=0',
        'vdw_radii': "shape=(~1010,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~2880',
      'name': 'caffeine.sdf',
      'polys': '~1920',
      'verts': '~1010',
    }),
  })
# ---
# name: test_load[surface-mol]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(862, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_name': 'shape=(862,), atype=INT, constant=-1',
        'atom_types': "shape=(862,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(862,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(862,), atype=FLOAT, constant=0',
        'chain_id': 'shape=(862,), atype=INT, constant=0',
        'group_id': 'shape=(862,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_backbone': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_carb': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_hetero': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_lipid': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_nucleic': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_peptide': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_side_chain': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'is_solvent': 'shape=(862,), atype=BOOLEAN, true=0, false=862',
        'mass': "shape=(862,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'material_index': 'shape=(860,), atype=INT, constant=0',
        'occupancy': 'shape=(862,), atype=FLOAT, constant=0',
        'position': 'shape=(862, 3), atype=FLOAT_VECTOR, range=[-0.494, 0.565]',
        'res_id': 'shape=(862,), atype=INT, constant=0',
        'res_name': 'shape=(862,), atype=INT, constant=-1',
        'segid': 'shape=(862,), atype=INT, constant=0',
        'ures_id': 'shape=(862,), atype=INT, constant=0',
        'vdw_radii': "shape=(862,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~1720',
      'name': 'caffeine.mol',
      'polys': '860',
      'verts': '862',
    }),
  })
# ---
# name: test_load[surface-sdf]
  dict({
    'mesh': dict({
      'attributes': dict({
        'Color': 'shape=(864, 4), atype=FLOAT_COLOR, range=[0.051, 1]',
        'atom_name': 'shape=(864,), atype=INT, constant=-1',
        'atom_types': "shape=(864,), atype=INT, unique=4, values=['0', '1', '2', '3']",
        'atomic_number': "shape=(864,), atype=INT, unique=4, values=['1', '6', '7', '8']",
        'b_factor': 'shape=(864,), atype=FLOAT, constant=0',
        'chain_id': 'shape=(864,), atype=INT, constant=0',
        'group_id': 'shape=(864,), atype=INT, constant=0',
        'is_alpha_carbon': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_backbone': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_carb': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_hetero': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_lipid': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_nucleic': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_peptide': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_side_chain': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'is_solvent': 'shape=(864,), atype=BOOLEAN, true=0, false=864',
        'mass': "shape=(864,), atype=FLOAT, unique=4, values=['1.01', '12', '14', '16']",
        'material_index': 'shape=(862,), atype=INT, constant=0',
        'occupancy': 'shape=(864,), atype=FLOAT, constant=0',
        'position': 'shape=(864, 3), atype=FLOAT_VECTOR, range=[-0.439, 0.599]',
        'res_id': 'shape=(864,), atype=INT, constant=0',
        'res_name': 'shape=(864,), atype=INT, constant=-1',
        'segid': 'shape=(864,), atype=INT, constant=0',
        'ures_id': 'shape=(864,), atype=INT, constant=0',
        'vdw_radii': "shape=(864,), atype=FLOAT, unique=4, values=['0.12', '0.152', '0.155', '0.17']",
      }),
      'edges': '~1720',
      'name': 'caffeine.sdf',
      'polys': '862',
      'verts': '864',
    }),
  })
# ---
